<resources>
    <string name="app_name">ChurchDesk</string>
    <string name="api_client_id" translatable="false">2_3z9mhb9d9xmo8k0g00wkskckcs4444k4kkokw08gg4gs8k04ok</string>
    <string name="api_client_secret" translatable="false">hlymtmodq0gs48kcwwwsccogo8sc8o4sook8sgs8040w8s44o</string>
    <string name="gcm_project_number" translatable="false" translateable="false">582737305322</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="loading" translatable="false">Loading …</string>
    <string name="menu_dashboard" translatable="false">Dashboard</string>
    <string name="menu_messages">My messages</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_people">People</string>
    <string name="menu_help">Help and Support</string>
    <string name="menu_settings">Settings</string>
    <string name="dashboard_tab_1">Today</string>
    <string name="dashboard_tab_2">Invitations</string>
    <string name="dashboard_tab_3">My messages</string>
    <string name="people">People</string>
    <string name="segments">Segments</string>
    <string name="all_day">All day</string>
    <string name="invited_by">Invited by %s</string>
    <string name="swipe_mark_as_read">Mark as read</string>
    <string name="button_login">Login</string>
    <string name="new_message_title">New message</string>
    <string name="new_message_parish">Parish</string>
    <string name="new_message_group">Group</string>
    <string name="new_message_hint_title">Title</string>
    <string name="new_message_hint_message">Write your message here…</string>
    <string name="new_message_create_progress" translatable="false">Sending message</string>
    <string name="message_title">Message</string>
    <string name="button_reply">Reply</string>
    <string name="hint_comment">Write a comment</string>
    <string name="message_read_more">Load more comments (%d)</string>
    <string name="is_answer" translatable="false">Re: %s</string>
    <string name="hint_email">E-mail address</string>
    <string name="hint_password">Password</string>
    <string name="send">Send</string>
    <string name="logout">Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_sure">Are you sure you want to sign out?</string>
    <string name="no_unread">No unread messages</string>
    <string name="no_messages">No messages</string>
    <string name="no_invitations">No invitations</string>
    <string name="no_events">No events today</string>
    <string name="no_people">No people to show</string>
    <string name="unknown">Unknown</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_desc">Here you can choose when to receive notifications on your phone.</string>
    <string name="notifications_events_created">An invitation is received</string>
    <string name="notifications_events_updates">An invitation is updated</string>
    <string name="notifications_events_cancels">An invitation is cancelled</string>
    <string name="notifications_new_message">New or messages and comments</string>
    <string name="monday">mon</string>
    <string name="tuesday">tue</string>
    <string name="wednesday">wed</string>
    <string name="thursday">thu</string>
    <string name="friday">fri</string>
    <string name="saturday">sat</string>
    <string name="sunday">sun</string>
    <string name="week">Week %d</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="new_event_title">New Event</string>
    <string name="new_absence_title">New Absence</string>
    <string name="new_event_parish_chooser">Select Parish</string>
    <string name="new_event_group_chooser">Select Groups</string>
    <string name="new_event_visibility_chooser">Select Visibility</string>
    <string name="new_event_category_chooser">Select Categories</string>
    <string name="new_event_resources_chooser">Select Resources</string>
    <string name="new_event_users_chooser">Select Users</string>
    <string name="new_event_time_start_chooser">Choose start date</string>
    <string name="new_event_time_end_chooser">Choose end date</string>
    <string name="new_event_timepicker_date">Date</string>
    <string name="new_event_timepicker_time">Time</string>
    <string name="new_event_allday_title">All day</string>
    <string name="new_event_starttime_title" translatable="false">Start</string>
    <string name="new_event_endtime_title">End</string>
    <string name="new_event_parish_title">Parish</string>
    <string name="new_event_group_title">Group</string>
    <string name="new_event_category_title">Category</string>
    <string name="new_event_resources_title">Resources</string>
    <string name="new_event_users_title">Users</string>
    <string name="new_event_doublebooking_title">Allow Double Booking</string>
    <string name="new_event_visibility_title">Visibility</string>
    <string name="new_event_none_available">None available</string>
    <string name="new_event_create_progress">Creating event</string>
    <string name="new_absence_create_progress">Creating absence</string>
    <string name="new_event_create_error">Error creating the event</string>
    <string name="new_absence_create_error">Error creating the absence</string>
    <string name="new_event_hint_title">Title</string>
    <string name="new_event_hint_location">Location</string>
    <string name="new_event_hint_note">Internal note</string>
    <string name="new_absence_hint_substitute">Substitute</string>
    <string name="new_absence_hint_comments">Comments</string>
    <string name="new_event_hint_description">Description</string>
    <string name="new_event_hint_contributor">Contributor</string>
    <string name="new_event_hint_price">Price</string>
    <string name="edit_event_dialog_double_booking">Double booking</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="edit_absence_title">Edit Absence</string>
    <string name="edit_event_edit_progress">Editing event</string>
    <string name="edit_absence_edit_progress">Editing absence</string>
    <string name="edit_event_edit_error">Error editing the event</string>
    <string name="edit_absence_edit_error">Error editing the absence</string>
    <string name="event_details_title">Event Information</string>
    <string name="absence_details_title">Absence Information</string>
    <string name="event_details_categories_dialog">Categories</string>
    <string name="event_details_resource_dialog">Resources</string>
    <string name="event_details_users_dialog">Users booked</string>
    <string name="event_details_note_dialog">Internal Note</string>
    <string name="event_details_description_dialog">Description</string>
    <string name="event_details_attendance_title">Attendance</string>
    <string name="event_details_attendance_no_reply">No reply</string>
    <string name="event_details_attendance_message">Are you going to the event \'%s\'?</string>
    <string name="event_details_attendance_error">Error answering event</string>
    <string name="event_details_resources_title">Resources</string>
    <string name="event_details_users_title">Users booked</string>
    <string name="event_details_note_title">Internal Note</string>
    <string name="event_details_contributor_title">Contributor</string>
    <string name="event_details_price_title">Price</string>
    <string name="event_details_visibility_title">Visibility</string>
    <string name="event_details_datecreated_title">Created On</string>
    <string name="event_details_visibility_allusers">All Users</string>
    <string name="event_details_visibility_group">Specific Groups</string>
    <string name="event_details_visibility_website">Public</string>
    <string name="event_details_visibility_draft">Private</string>
    <string name="comment_dialog_title">Delete comment</string>
    <string name="comment_dialog_message">Do you want to delete this comment?</string>
    <string name="comment_dialog_yes">Yes</string>
    <string name="comment_dialog_no">No</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_forgot_password_message">Please enter your email to receive instructions on how to reset your password</string>
    <string name="dialog_forgot_password_title">Forgot password</string>
    <string name="event_details_response_no_answer">No reply</string>
    <string name="event_details_response_not_going">Not going</string>
    <string name="event_details_response_going">Going</string>
    <string name="event_details_response_maybe">Maybe</string>
    <string name="event_details_location_dialog_title">Maps</string>
    <string name="event_details_location_dialog_message">Do you want to open Maps to get directions to \'%s\?</string>
    <string name="event_details_location_dialog_button_positive">Open maps</string>
    <string name="event_details_location_dialog_button_negative">Cancel</string>
    <string name="event_details_category_title">Categories</string>
    <string name="messages_search_hint">Search messages</string>
    <string name="messages_filter_title">Choose filter</string>
    <string name="messages_filter_button_positive">Show unread</string>
    <string name="messages_filter_button_negative">Show all</string>
    <string name="calendar_filter_button_positive">My events</string>
    <string name="calendar_filter_button_negative">All events</string>
    <string name="dialog_reset" translatable="false">RESET</string>
    <string name="forgot_password_request_error_header">Password reset failed</string>
    <string name="forgot_password_request_error_text">Something went wrong while resetting your password. Please try again.</string>
    <string name="forgot_password_success_header">Success</string>
    <string name="forgot_password_success_text">Instructions for resetting your password will be sent to \'%s\'.</string>
    <string name="start_activity_forgot_password">Forgot password?</string>
    <string name="start_icon_text">More church, less administration</string>
    <string name="event_dialog_double_booking_title">You are about to make a double booking of one or more resources/users.</string>
    <string name="event_dialog_double_booking_button_cancel">Cancel</string>
    <string name="event_dialog_double_booking_button_allow">Allow Double Booking</string>
    <string name="calendar_button_now">now</string>
    <string name="menu_event_add_title">Add</string>
    <string name="menu_event_save_title">Save</string>
    <string name="menu_event_details_edit">Edit</string>
    <string name="menu_messages_search_title">Search</string>
    <string name="menu_messages_filter_title">Filter</string>
    <string name="menu_pop_over_comment_edit">Edit</string>
    <string name="menu_pop_over_comment_delete">Delete</string>
    <string name="login_failed">Wrong username or password</string>
    <string name="login_progress_title">Please wait</string>
    <string name="login_progress_message">Logging you in</string>
    <string name="login_password_validation_error">Please check your password</string>
    <string name="login_email_validation_error">Not a valid email</string>
</resources>