<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <dk.shape.churchdesk.widget.CustomTextView
        android:id="@+id/dialog_attendance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/dialog_forgot_password_message"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:fontType="regular"/>


    <dk.shape.churchdesk.widget.CustomEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/default_margin"
        android:drawableLeft="@drawable/login_mail"
        android:drawableStart="@drawable/login_mail"
        android:drawablePadding="@dimen/default_half_margin"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"
        style="@style/WhiteEditText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <dk.shape.churchdesk.widget.CustomTextView
            android:id="@+id/dialog_cancel"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_half"
            android:layout_marginRight="@dimen/margin_half"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/foreground_blue"
            android:textSize="16sp"
            app:fontType="regular"/>

        <dk.shape.churchdesk.widget.CustomTextView
            android:id="@+id/dialog_accept"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_half"
            android:layout_marginRight="@dimen/margin_half"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dialog_reset"
            android:textColor="@color/foreground_blue"
            android:textSize="16sp"
            app:fontType="regular"/>

    </LinearLayout>

</LinearLayout>