<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <dk.shape.churchdesk.widget.CustomTextView
        android:id="@+id/double_booking_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingRight="@dimen/margin"
        android:paddingEnd="@dimen/margin"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:text="@string/event_dialog_double_booking_title"
        app:fontType="regular"/>

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:gravity="center"
        android:background="@color/foreground_grey"/>

    <WebView
        android:id="@+id/dialog_double_booking_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:gravity="center"
        android:background="@color/foreground_grey"/>

    <RelativeLayout
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/multi_item_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <dk.shape.churchdesk.widget.CustomTextView
            android:id="@+id/dialog_double_booking_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@color/foreground_blue"
            android:text="@string/event_dialog_double_booking_button_cancel"
            android:layout_toLeftOf="@+id/dialog_double_booking_allow"
            android:layout_toStartOf="@+id/dialog_double_booking_allow"
            app:fontType="regular"/>

        <dk.shape.churchdesk.widget.CustomTextView
            android:id="@+id/dialog_double_booking_allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginRight="@dimen/margin_half"
            android:layout_marginEnd="@dimen/margin_half"
            android:textSize="16sp"
            android:textColor="@color/foreground_blue"
            android:text="@string/event_dialog_double_booking_button_allow"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:fontType="regular"/>

    </RelativeLayout>

</LinearLayout>